force-app/main/default/objects/Creditsafe_Company_Basic_Information__c/Creditsafe_Company_Basic_Information__c.object-meta.xml
<CustomObject>
    <description>Basic information on a company.</description>
    <label>Creditsafe Company Basic Information</label>
    <nameField>
        <label>Creditsafe Company Basic Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditsafe Company Basic Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>