force-app/main/default/objects/Creditsafe_Company_Basic_Information__c/fields/Company_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_Number__c</fullName>
    <description>Official registration number.</description>
    <label>Company Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>