force-app/main/default/objects/Creditsafe_Company_Basic_Information__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Address</description>
    <label>Contact Address</label>
    <referenceTo>Dossier_Address__c</referenceTo>
    <relationshipLabel>Creditsafe Company Basic Information</relationshipLabel>
    <relationshipName>Creditsafe_Company_Basic_Information</relationshipName>
    <type>Lookup</type>
</CustomField>