force-app/main/default/objects/Creditsafe_Company_Basic_Information__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country where the company is registered.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>