force-app/main/default/objects/Creditsafe_Company_Basic_Information__c/fields/Dateof_Company_Registration__c.field-meta.xml
<CustomField>
    <fullName>Dateof_Company_Registration__c</fullName>
    <description>The date the company was registered.</description>
    <label>Dateof Company Registration</label>
    <type>DateTime</type>
</CustomField>