force-app/main/default/objects/Creditsafe_Company_Basic_Information__c/fields/Legal_Form_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form_Description__c</fullName>
    <description>Description</description>
    <label>Legal Form Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>