force-app/main/default/objects/Creditsafe_Company_Basic_Information__c/fields/Principal_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Principal_Activity_Description__c</fullName>
    <description>Description</description>
    <label>Principal Activity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>